--- a/css/style.css
+++ b/css/style.css
@@ -863,7 +863,7 @@ body.isActive {
   padding: 10rem;
   width: 35rem;
   height: 30rem;
-  transition: background-color 0.3s, color 0.3s;
+  transition: background-color 0.4s, color 0.4s;
 }
 .reservation__btn:hover {
   background-color: #333631;
@@ -871,7 +871,7 @@ body.isActive {
 }
 .reservation__logo {
   margin-bottom: 3rem;
-  transition: fill 0.3s ease-in-out;
+  transition: fill 0.4s ease-in-out;
 }
 .reservation__label {
   margin-top: 2rem;
@@ -912,13 +912,17 @@ body.isActive {
   align-items: center;
   justify-content: center;
   background-color: #fdfdfd;
-  border: solid 0.1rem #333631;
+  border-top: solid 0.1rem #333631;
+  border-right: solid 0.1rem #333631;
   width: 100%;
   height: 100%;
   transition: background-color 0.3s, color 0.3s;
   box-sizing: border-box;
   max-width: 100%; /* 最大幅を100%に設定 */
   overflow: hidden; /* 要素がはみ出さないようにする */
+}
+.float__btn:first-child {
+  border-left: solid 0.1rem #333631;
 }
 .float__logo {
   margin-bottom: 1rem;
@@ -1076,6 +1080,7 @@ body.isActive {
   font-weight: "bold";
   letter-spacing: 0.1rem;
   font-style: normal;
+  letter-spacing: 0.1;
   font-size: 1.2rem;
   margin-bottom: 7rem;
 }
