--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -935,7 +935,7 @@ body.isActive {
         padding: 10rem;
         width: 35rem;
         height: 30rem;
-        transition: background-color 0.3s, color 0.3s;
+        transition: background-color 0.4s, color 0.4s;
 
         &:hover {
             background-color: $black;
@@ -945,7 +945,7 @@ body.isActive {
 
     &__logo {
         margin-bottom: 3rem;
-        transition: fill 0.3s ease-in-out;
+        transition: fill 0.4s ease-in-out;
 
     }
 
@@ -991,13 +991,18 @@ body.isActive {
         align-items: center;
         justify-content: center;
         background-color: $white;
-        border: solid 0.1rem $black;
+        border-top: solid 0.1rem $black;
+        border-right: solid 0.1rem $black;
         width: 100%;
         height: 100%;
         transition: background-color 0.3s, color 0.3s;
         box-sizing: border-box;
         max-width: 100%; /* 最大幅を100%に設定 */
         overflow: hidden; /* 要素がはみ出さないようにする */
+    }
+
+    &__btn:first-child {
+        border-left: solid 0.1rem $black;
     }
 
     &__logo {
@@ -1012,7 +1017,6 @@ body.isActive {
         font-size: 1.2rem;
     }
 }
-
 
 @include pc {
     .float {
@@ -1175,6 +1179,7 @@ body.isActive {
 
 .copyright {
     @include accentFont;
+    letter-spacing: 0.1;
     font-size: 1.2rem;
     margin-bottom: 7rem;
 
